Fix: no sound on iOS.
This closes #11.

--- a/src/client/styles/bootstrap-override.styl
+++ b/src/client/styles/bootstrap-override.styl
@@ -1,3 +1,4 @@
+/* Grid */
 .container {
 	padding-right: 0px;
 	padding-left: 0px;
@@ -20,3 +21,14 @@
 		width: 100%;
 	}
 }
+
+/* Buttons */
+.viktor.btn
+	color: #CDCDCD
+	background-color: #345776
+	border-color: #63717E
+	&:hover,
+	&:focus
+		color: #DBDBDB
+		background-color: #3F6A91
+		outline: none
