--- a/src/client/styles/daw/modals.styl
+++ b/src/client/styles/daw/modals.styl
@@ -18,11 +18,3 @@
 			opacity: 0.8
 		&:active
 			opacity: 0.3
-	.btn
-		color: #CDCDCD
-		background-color: #345776
-		border-color: #63717E
-		&:focus
-			color: #DBDBDB
-			background-color: #3F6A91
-			outline: none
