--- a/src/client/styles/main.styl
+++ b/src/client/styles/main.styl
@@ -31,3 +31,10 @@ body
 	-moz-user-select: none
 	-ms-user-select: none
 	user-select: none
+
+.centered
+	position: fixed
+	top: 50%
+	left: 50%
+	/* bring your own prefixes */
+	transform: translate(-50%, -50%)
